Annotating in memory repositories with Component