@@ -3,11 +3,12 @@ package com.bczovek.survey.api.repository.impl;
 import com.bczovek.survey.api.model.Member;
 import com.bczovek.survey.api.repository.MemberRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+@Component
 @RequiredArgsConstructor
 public class InMemoryMemberRepository implements MemberRepository {
 
@@ -24,6 +25,6 @@ public class InMemoryMemberRepository implements MemberRepository {
                 .stream()
                 .filter(memberEntry -> ids.contains(memberEntry.getKey()))
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
