@@ -3,11 +3,13 @@ package com.bczovek.survey.api.repository.impl;
 import com.bczovek.survey.api.model.Survey;
 import com.bczovek.survey.api.repository.SurveyRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+@Component
 @RequiredArgsConstructor
 public class InMemorySurveyRepository implements SurveyRepository {
 
@@ -24,6 +26,6 @@ public class InMemorySurveyRepository implements SurveyRepository {
                 .stream()
                 .filter(surveyEntry -> ids.contains(surveyEntry.getKey()))
                 .map(Map.Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
